# recruiting-challenge

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/routers/: chromadb_manage.py  health.py  profile_create.py  profile_create_5poses.py  profile_verify.py  quality_check.py  register.py  root.py
app/services/: chromadb_service.py  facial_analysis.py  logging_config.py  openapi_schema.py  port_utils.py  quality_check_utils.py  spoof_model.py  standard_response.py
conf/: full_runtime.yaml
tests/: conftest.py  test_chromadb_service.py  test_facial_analysis.py  test_input_robustness.py  test_main_import.py  test_profile_create.py  test_profile_verify.py  test_utils.py
ui/: landing.py
ui/.streamlit/: config.toml
ui/pages/: boardroom.py  enroll.py  verify.py
